2007-02-09 Harri Pitkänen <hatapitk@iki.fi>

	* Fix broken suggestions for words with non-default capitalisation
	* No longer leak iconv handles when library initialisation fails
	* Increase version to 1.3.1

2007-01-28 Harri Pitkänen <hatapitk@iki.fi>

	* Fix character set conversion on Windows

2007-01-27 Harri Pitkänen <hatapitk@iki.fi>

	* Fix typo in voikko_hyphenate.h

2007-01-26 Harri Pitkänen <hatapitk@iki.fi>

	* Add new option VOIKKO_MIN_HYPHENATED_WORD_LENGTH.
	* Remove empty TODO.

2007-01-25 Harri Pitkänen <hatapitk@iki.fi>

	* Add some more hyphenation points when VOIKKO_OPT_NO_UGLY_HYPHENATION
	  is not set.

2007-01-20 Harri Pitkänen <hatapitk@iki.fi>

	* Add a word length check to voikko_split_compounds.
	* Fixes to documentation.

2007-01-16 Harri Pitkänen <hatapitk@iki.fi>

	* Support explicitly specified string lengths as opposed to only
	  allowing null terminated strings in certain utility functions.
	* VOIKKO_OPT_IGNORE_DOT is now respected during hyphenation as well,
	  and corresponding option is supported by voikkohyphenate. This
	  was needed because apparently at least OpenOffice.org feeds the
	  trailing dot to the hyphenator extension and expects it to deal
	  with it correctly.

2007-01-06 Harri Pitkänen <hatapitk@iki.fi>

	* Add a few more replacement suggestions, thanks to
	  Teemu Likonen.

2007-01-01 Harri Pitkänen <hatapitk@iki.fi>

	* Accept optional hyphens as in "syys-ilta" and "syy-silta".
	* Accept optional hyphens as in "pop-opisto".

2006-12-31 Harri Pitkänen <hatapitk@iki.fi>

	* Clean up suggestion code.
	* Add new option VOIKKO_OPT_OCR_SUGGESTIONS for OCR optimised spelling
	  suggestions.
	* Increase version numbers.

2006-12-30 Harri Pitkänen <hatapitk@iki.fi>

	* Do not suggest splitting word immediately before or after a
	  hyphen. Move word splitting suggestions to lower priority.
	* Check the cost parameter within individual suggestion functions,
	  not just between the functions.
