@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2007-01-26"
+.TH VOIKKOSPELL 1 "2007-02-14"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -51,6 +51,17 @@ before the standard locations when searching for dictionary files.
 For checking large amounts of unsorted text you may want to set
 .I n
 to 5 to get better performance.
+.TP
+.BI \-x c
+(voikkospell) Like
+.B voikkospell -s
+but output is printed on one line separated by character
+.IR c 
+without "C", "W" or "S" in front of the words.
+If
+.IR c
+is not defined words are separated by space and suggestions that have
+spaces in them are not printed.
 .TP
 .BI min_hyphenated_word_length= n
 (voikkohyphenate) Set
